force-app/main/default/objects/Pipeline_Stage__c/Pipeline_Stage__c.object-meta.xml
<CustomObject>
    <label>Pipeline Stage</label>
    <pluralLabel>Pipeline Stages</pluralLabel>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <description>Pipeline Stage</description>
</CustomObject>