force-app/main/default/objects/Pipeline_Stage__c/fields/Auto_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Auto_Trigger__c</fullName>
    <label>Auto Trigger</label>
    <type>Checkbox</type>
    <defaultValue>true</defaultValue>
</CustomField>