force-app/main/default/objects/Pipeline_Stage__c/fields/On_Failure_Action__c.field-meta.xml
<CustomField>
    <fullName>On_Failure_Action__c</fullName>
    <label>On Failure Action</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Block</fullName><default>false</default><label>Block</label></value>
            <value><fullName>Warn</fullName><default>false</default><label>Warn</label></value>
            <value><fullName>Skip</fullName><default>false</default><label>Skip</label></value>
            <value><fullName>Rollback</fullName><default>false</default><label>Rollback</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>