force-app/main/default/objects/Pipeline_Stage__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <label>Order</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
</CustomField>