force-app/main/default/objects/Pipeline_Stage__c/fields/Pipeline__c.field-meta.xml
<CustomField>
    <fullName>Pipeline__c</fullName>
    <label>Pipeline</label>
    <type>MasterDetail</type>
    <referenceTo>Pipeline__c</referenceTo>
    <relationshipLabel>Pipeline Stages</relationshipLabel>
    <relationshipName>Pipeline_Stages</relationshipName>
</CustomField>