force-app/main/default/objects/Pipeline_Stage__c/fields/Quality_Gate__c.field-meta.xml
<CustomField>
    <fullName>Quality_Gate__c</fullName>
    <label>Quality Gate</label>
    <type>Lookup</type>
    <referenceTo>Quality_Gate__c</referenceTo>
    <relationshipLabel>Pipeline Stages</relationshipLabel>
    <relationshipName>Pipeline_Stages</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>