force-app/main/default/objects/Pipeline_Stage__c/fields/Target_Environment__c.field-meta.xml
<CustomField>
    <fullName>Target_Environment__c</fullName>
    <label>Target Environment</label>
    <type>Lookup</type>
    <referenceTo>Environment__c</referenceTo>
    <relationshipLabel>Pipeline Stages</relationshipLabel>
    <relationshipName>Pipeline_Stages</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>