force-app/main/default/objects/Pipeline_Stage__c/fields/Timeout_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Timeout_Minutes__c</fullName>
    <label>Timeout Minutes</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
</CustomField>