force-app/main/default/objects/Pipeline_Stage__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Validate</fullName><default>false</default><label>Validate</label></value>
            <value><fullName>Deploy</fullName><default>false</default><label>Deploy</label></value>
            <value><fullName>Test</fullName><default>false</default><label>Test</label></value>
            <value><fullName>QualityGate</fullName><default>false</default><label>QualityGate</label></value>
            <value><fullName>Approval</fullName><default>false</default><label>Approval</label></value>
            <value><fullName>Rollback</fullName><default>false</default><label>Rollback</label></value>
            <value><fullName>Notification</fullName><default>false</default><label>Notification</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>